Fix overflow issues

--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@
 
 body {
     font-size: 13px;
-    overflow:scroll;
     line-height: 24px;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #666;
+}
+.main{
+  overflow-x: hidden;
 }
 /* GENERAL STYLES */
 
@@ -77,19 +79,18 @@ li{
     max-width: 100%;
     white-space: normal;
 }
-.dropdown ul {
+ .dropdown ul {
   display: none;
   position: absolute;
-  padding: 1px 10px;
+  padding: 2px 10px;
   background: #292929;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #fff;
-  z-index: 99;
-}
+} 
 .menu >ul li > ul li a {
   color: #fff;
   height: 50px;
-  padding: 6px 40px;
+  padding: 6px 10px;
   font-weight: 600;
 }
 .menu li a {
@@ -104,9 +105,9 @@ li{
   white-space: normal;
 }
 
-.dropdown:hover ul {
+ .dropdown:hover ul {
   display: block;
-} 
+}  
 
 /*HEADER SECTION ENDS*/
 
@@ -700,10 +701,12 @@ background-color: #f8f8f8;
     color: #292929;
     text-align: center;
     max-width: 800px;
+    margin: 20px 20px;
 }
 .sect7 p{
   max-width: 650px;
   text-align: center;
+  margin: 20px 20px;
 }
 .sect7 p a{
   max-width: 650px;
@@ -717,7 +720,7 @@ background-color: #f8f8f8;
  .sect8 {
   display: flex;
   justify-content: center;
-  padding: 96px 90px;
+  padding: 96px 40px;
   margin-left: 16px;
 }
 .wrapper {
@@ -731,7 +734,7 @@ background-color: #f8f8f8;
 }
 .feature8 img{
   max-width: 500px;
-  max-width: clamp(98%, 99%, 100%);
+  max-width: clamp(80%, 85%, 90%);
   margin: 0;
   padding: 0;
 }
@@ -739,15 +742,16 @@ background-color: #f8f8f8;
   cursor: pointer;
   background-color: #f5f5f5;
   color: #666;
-  padding: 13px;
+  padding: 13px 40px;
   letter-spacing: 2px;
   font-weight: 700;
   display: flex;
   font-size: 13px;
   max-width: 500px;
-  max-width: clamp(98%, 99%, 100%);
+  max-width: clamp(90%, 95%, 100%);
   justify-content: space-between;
   text-transform: uppercase;
+  margin-right: 30px;
 }
 .para8{
   background-color:#ffffff;
@@ -771,10 +775,9 @@ background-color: #f8f8f8;
       border: #47b475;
       text-align: center;
       transition: all 0.3s ease;
-      padding: 5px 35px;
+      padding: 5px 30px;
       display: flex;
       text-align: center;
-      margin-left: 25px;
   }
 /*SECTION 9*/
 .contactsect{
@@ -782,19 +785,25 @@ background-color: #f8f8f8;
   margin-bottom: 0;
 }
 .background-image-hold {
-  max-width: 400px;
-  max-height: 400px;
- /*  top: 0;
-  left: 0;
+  width: 100%;
+  height:auto;
+  display: block;
+  top: 0;
+  left: 0; 
+  bottom: 0;
+  right: 0;
   z-index: 1;
-  background-size: cover;
-  background-position: 50% 50%; */
+  background-size: cover; 
+}
+.background-image-hold img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 .textcon{
-  padding: 60px 40px;
+padding:0 20px;
 }
 .copara{
-  margin: 0 0 10px;
   color: #666;
   font-weight: 400;
   font-size: 13px;
@@ -808,7 +817,7 @@ background-color: #f8f8f8;
     text-align: center;
     justify-content: center;
     background-color: #292929;
-    padding: 40px 0;
+     padding: 40px 0; 
 }
 
 
@@ -866,21 +875,22 @@ width: 100%;
   margin-bottom: 34px;
 }
 }
-@media screen and (max-width:1012px){
-  .contactsect{
-    display:block;
-    width: 100%;
+ 
+ @media screen and (max-width:994px){
+  .background-image-hold {
+   width: 100%;
+   height:auto;
+   background-size:contain;
   }
- /*  .background-image-hold {
-    width: 100%;
-    height: 100vh;
-   justify-content: center;
-   align-items: center;
-    z-index: 1;
-    background-size: cover;
-    display: flex;
-  } */
-}
+  .background-image-hold img {
+   width: 100%;
+   height:100%;
+  }
+  .contactsect{
+    margin-bottom: 0;
+  }
+} 
+ 
 @media screen and (max-width:985px){
   .sect8{
     display: block;
@@ -926,6 +936,21 @@ width: 100%;
   padding-right: 45px;
 }
 }
+@media screen and (max-width:820px){
+  .contactsect{
+    display: block;
+  }
+  .background-image-hold {
+    width: 100%;
+    height:400px;
+    background-size:cover;
+    margin-bottom: 20px;
+   }
+   .textcon{
+    margin-bottom: 20px;
+   }
+   
+}
 @media screen and (max-width:812px){
   .header{
     position: relative;
@@ -947,8 +972,8 @@ width: 100%;
   .show-menu{
     position: absolute;
     margin-top: 206px;
-    width: 800px;
-    height:7rem;
+    max-width: 800px;
+    height:7.5rem;
     display: block;
     padding: 1px;
    background-color: #ffffff;
@@ -974,25 +999,37 @@ li{
     transform:rotate(180deg);
 } 
 .dropdown ul {
-  width: 10%;
-  margin-bottom: 10px;
-  padding: 6px 10px;
- 
-}
-/* .fa-chevron-down{
-  display: flex;
-  margin-left:10px ;
-} */
+  padding: 1px 1px;
+width: 730px;
+margin-top: 0;
 
-.show-menu .dropdown:hover {
-  margin-bottom:3rem;
-} 
+}
+.fa-chevron-down{
+margin-left: 600px;
+margin-right: 0;
+margin-top: 0;
+padding: 0;
+position: absolute;
+}
+
+ .show-menu .dropdown:hover {
+  margin-bottom:2rem;
+}   
+
 .play-button {
   width: 95px;
   height: 95px;
 }
 }
 @media screen and (max-width:768px){
+  .dropdown ul {
+  width: 680px;
+  
+  }
+  .fa-chevron-down{
+  margin-left: 570px;
+  }
+  
   .sect3 {
     padding: 50px 20px; 
   }
@@ -1080,6 +1117,15 @@ li{
      margin-top: 2%;
    }
 }
+@media screen and (max-width:714px){
+  .dropdown ul {
+  width: 640px;
+  
+  }
+  .fa-chevron-down{
+  margin-left: 540px;
+  }
+}
 @media screen and (max-width:688px){
   .hero{
     padding-top: 20px;
@@ -1095,6 +1141,13 @@ li{
 } 
 
 @media screen and (max-width:670px){
+  .dropdown ul {
+    width: 600px;
+    
+    }
+    .fa-chevron-down{
+    margin-left: 500px;
+    }
   .sect2 {
     padding: 5px 5px;
   
@@ -1129,6 +1182,15 @@ li{
 }
 
 }
+@media screen and (max-width:632px){
+  .dropdown ul {
+    width: 560px;
+    
+    }
+    .fa-chevron-down{
+    margin-left: 440px;
+    }
+  }
 @media screen and (max-width:621px){
   .btn3{margin-left: 24%;
     
@@ -1140,8 +1202,24 @@ li{
     font-size: 13px;
   }
 }
+@media screen and (max-width:588px){
+  .dropdown ul {
+    width: 520px;
+    
+    }
+    .fa-chevron-down{
+    margin-left: 400px;
+    }
+  }
 @media screen and (max-width:555px){
-  .btn3{margin-left: 21%;
+  
+  .dropdown ul {
+    width: 470px;
+    
+    }
+    .fa-chevron-down{
+    margin-left: 350px;
+    }.btn3{margin-left: 21%;
   }
 }
 @media screen and (max-width:518px){
@@ -1149,6 +1227,15 @@ li{
   }
   .sect7 p{
     margin: 16px;
+  }
+}
+@media screen and (max-width:500px){
+.dropdown ul {
+  width: 430px;
+  
+  }
+  .fa-chevron-down{
+  margin-left: 300px;
   }
 }
 @media screen and (max-width:478px){
@@ -1160,7 +1247,16 @@ li{
     width:130px;
     margin-left: 25%;
   }
-}
+  
+    .dropdown ul {
+      width: 390px;
+      
+      }
+      .fa-chevron-down{
+      margin-left: 260px;
+      }
+    }
+
 
 @media screen and (max-width:450px){
   .icon-container a img{
@@ -1243,6 +1339,15 @@ li{
     margin: 16px;
 }
 } 
+@media screen and (max-width:416px){
+  .dropdown ul {
+    width: 350px;
+    
+    }
+    .fa-chevron-down{
+    margin-left: 220px;
+    }
+  }
 @media screen and (max-width:397px){
   .title8 {
     
@@ -1255,10 +1360,17 @@ li{
     
     min-width: 50px;
     padding: 8px 30px;
-    font-size: 11px;
-    
+    font-size: 11px; 
 } 
+.dropdown ul {
+  width: 310px;
+  
+  }
+  .fa-chevron-down{
+  margin-left: 180px;
+  }
 }
+
 @media screen and (max-width:360px){
 .hero{
   padding-bottom: 10px;
@@ -1288,6 +1400,16 @@ li{
   margin-left: 15px;
 }
 }
+
+@media screen and (max-width:338px){
+  .dropdown ul {
+    width: 250px;
+    
+    }
+    .fa-chevron-down{
+    margin-left:100px;
+    }
+  }
 
 @media screen and (max-width:320px){
   .sect1 h4 {
